--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,20 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: 5
-  timeout: 5000
+  username: root
+  password: root
+  host: 127.0.0.1
+  port: 3306
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: wechat_starter_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: wechat_starter_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: wechat_starter_production
