--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,7 @@
 default: &default
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  username: root
-  password: root
-  host: 127.0.0.1
-  port: 3306
 
 development:
   <<: *default
