Fix the only testing case.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+one:
+  provider: wechat
+  uid: 12345
+  nickname: wechat
+
 #
 two: {}
 #  column: value
