--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: ruby
 
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+
 sudo: false
 
 addons:
@@ -11,9 +15,9 @@ services:
 rvm:
   - 2.2.4
 
-install:
-  - "travis_retry bundle config build.nokogiri --use-system-libraries"
-  - "travis_retry bundle install --retry 3"
+bundler_args: --without development --deployment --jobs=3 --retry=3
+
+cache: bundler
 
 before_script:
   - psql -c 'create database wechat_starter_test;' -U postgres
