Demo wechat_config_js usage.

--- a/config/wechat.yml
+++ b/config/wechat.yml
@@ -12,6 +12,7 @@ development:
   <<: *default
   encoding_aes_key: <%= Figaro.env.wechat_encoding_aes_key %>
   encrypt_mode: true
+  trusted_domain_fullname: <%= Figaro.env.wechat_trusted_domain_fullname %>
 
 test:
   <<: *default
