remove https as we are using http version jssdk

--- a/config/menu_development.yaml
+++ b/config/menu_development.yaml
@@ -2,4 +2,4 @@ button:
   -
     type: "view"
     name: "wechat-starter"
-    url: "https://wechat-starter.herokuapp.com"
+    url: "http://wechat-starter.herokuapp.com"
