Possible Figaro is string.

--- a/config/wechat.yml
+++ b/config/wechat.yml
@@ -5,13 +5,13 @@ default: &default
 
 production:
   <<: *default
-  encrypt_mode: <%= Figaro.env.wechat_encrypt_mode %>
+  encrypt_mode: <%= Figaro.env.wechat_encrypt_mode == "true" %>
   encoding_aes_key: <%= Figaro.env.wechat_encoding_aes_key %>
   trusted_domain_fullname: <%= Figaro.env.wechat_trusted_domain_fullname %>
 
 development:
   <<: *default
-  encrypt_mode: <%= Figaro.env.wechat_encrypt_mode %>
+  encrypt_mode: <%= Figaro.env.wechat_encrypt_mode == "true" %>
   encoding_aes_key: <%= Figaro.env.wechat_encoding_aes_key %>
   trusted_domain_fullname: <%= Figaro.env.wechat_trusted_domain_fullname %>
 
