--- a/config/application.yml.sample
+++ b/config/application.yml.sample
@@ -4,8 +4,10 @@ wechat_secret: "7153c8b6f0c2f5e5b6672033422ae3fb"
 wechat_token:  "Token"
 wechat_encoding_aes_key: "EncodingAESKey"
 wechat_trusted_domain_fullname: "http://your_dev.proxy.qqbrowser.cc"
+access_token_path: "/tmp/wechat_starter_access_token"
+jsapi_ticket: "/tmp/wechat_starter_jsapi_ticket"
 
 # following is optional if you don't need wechat pay
 wechat_pay_mch_id: "merchant id"
 wechat_pay_api_key: "32 bits api key configured in pay.weixin.qq.com"
-wechat_pay_notify_url: "url to accept pay result notification"
+wechat_pay_notify_url: "http://your_dev.proxy.qqbrowser.cc/wx_notify"
