--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,16 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*
+/tmp/*
 !/log/.keep
-/tmp
+!/tmp/.keep
+
+/node_modules
+/yarn-error.log
+
+.byebug_history
 
 # Ignore application configuration
 /config/application.yml.*
@@ -24,5 +26,3 @@
 /shared
 /public/MP*.txt
 config/menu.yaml
-
-.byebug_history
